# clean-my-mac

./: README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.svelte-kit/: ambient.d.ts
.svelte-kit/output/client/.vite/: manifest.json
.svelte-kit/output/server/: index.js  internal.js  manifest-full.js
.svelte-kit/output/server/.vite/: manifest.json
.svelte-kit/output/server/chunks/: exports.js  index.js  internal.js  ssr.js  stores.js
.svelte-kit/output/server/entries/fallbacks/: error.svelte.js
.svelte-kit/output/server/entries/pages/: _layout.svelte.js  _page.svelte.js
.svelte-kit/output/server/nodes/: 0.js  1.js  2.js  3.js  4.js  5.js  6.js  7.js  8.js
.svelte-kit/types/: route_meta_data.json
.svelte-kit/types/src/routes/: $types.d.ts
.svelte-kit/types/src/routes/applications/: $types.d.ts
.svelte-kit/types/src/routes/assistant/: $types.d.ts
.svelte-kit/types/src/routes/cleanup/: $types.d.ts
.svelte-kit/types/src/routes/my-clutter/: $types.d.ts
.svelte-kit/types/src/routes/performance/: $types.d.ts
.svelte-kit/types/src/routes/protection/: $types.d.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: stores.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/applications/: +page.svelte
src/routes/assistant/: +page.svelte
src/routes/cleanup/: +page.svelte
src/routes/my-clutter/: +page.svelte
src/routes/performance/: +page.svelte
src/routes/protection/: +page.svelte
(+16 files in other folders)
